[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "tkmanager._get_name"
authors = [{ name = "Bruno Moretti" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.3"
]
dynamic = ["version"]

[project.urls]
github = "https://github.com/StafSis/TokenManager"
"Bug Tracker" = "https://github.com/StafSis/TokenManager/issues"

[tool.setuptools.package-dir]
tkmanager = "tkmanager"

[tool.setuptools-git-versioning]
enabled = true
version_callback = 'tkmanager._get_version'
dev_template = "{tag}.dev{ccount}"
dirty_template = "{tag}.dev{ccount}"
